--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "@reduxjs/toolkit": "^1.6.1",
     "ahooks": "^2.10.9",
     "axios": "^0.21.4",
-    "camelcase-keys": "^7.0.0",
     "date-fns": "^2.23.0",
     "date-fns-tz": "^1.1.6",
     "formik": "^2.2.9",
@@ -90,6 +89,7 @@
     "redux-dynamic-modules-saga": "^5.2.3",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "snakecase-keys": "^5.0.0",
     "styled-components": "^5.3.1",
     "styled-components-modifiers": "^1.2.5",
     "swiper": "^6.8.0",
